@@ -7,6 +7,7 @@ This file keeps track of all notable changes to the Slurm Charms.
 Unreleased
 ----------
 
+- add support for ElasticSearch Slurm addon
 - pin Operator Framework to 1.2.0
 
 0.8.4 - 2021-12-10
